<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bank"
            android:icon="@drawable/bank"
            android:title="@string/bank" />
        <item
            android:id="@+id/nav_bestBrise"
            android:icon="@drawable/bestprice"
            android:title="@string/bestPrices" />
        <item
            android:id="@+id/nav_gold"
            android:icon="@drawable/gold"
            android:title="@string/gold" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_connectUs"
            android:icon="@drawable/connect"
            android:title="@string/connectToUs" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/app_intro" />
    </group>


</menu>
